--- a/example/package.json
+++ b/example/package.json
@@ -21,7 +21,8 @@
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1",
-    "chartify": "1.0.1"
+    "chartify": "1.0.1",
+    "whatwg-fetch": "^1.0.0"
   },
   "license": "MIT"
 }
