add minification. add size comparison. closes #8

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "url": "https://github.com/kirillstepkin/chartify/issues",
     "email": "kirillstyopkin@gmail.com"
   },
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer": "^6.3.4",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^5.8.25",
@@ -54,7 +54,8 @@
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "webpack-uglify-js-plugin": "1.1.9"
   },
   "license": "MIT"
 }
