--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "optional": ["runtime"],
-  "stage": 0
+	"presets": ["es2015", "react", "stage-0"],
+  	"plugins": ["typecheck", "transform-class-properties", "transform-flow-strip-types"]
 }
