--- a/package.json
+++ b/package.json
@@ -2,6 +2,42 @@
   "name": "chartify",
   "description": "React.js plugin for creating charts. Inspired by kinopoisk.ru chart. Feel free for contribute.",
   "version": "1.0.6",
+  "scripts": {
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "start": "webpack"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.4",
+    "autoprefixer-loader": "^3.2.0",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.2.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2017": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-runtime": "^6.2.0",
+    "css-loader": "^0.23.1",
+    "eslint-plugin-react": "^5.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "flow-bin": "^0.35.0",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.2",
+    "postcss-mixins": "^5.0.0",
+    "precss": "^1.4.0",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-uglify-js-plugin": "1.1.9"
+  },
   "main": "chartify.js",
   "repository": "kirillstepkin/chartify",
   "homepage": "github.com/kirillstepkin/chartify",
@@ -35,27 +71,6 @@
   "bugs": {
     "url": "https://github.com/kirillstepkin/chartify/issues",
     "email": "kirillstyopkin@gmail.com"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.3.4",
-    "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
-    "babel-runtime": "^5.8.25",
-    "css-loader": "^0.23.1",
-    "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.4.2",
-    "postcss-loader": "^0.8.2",
-    "postcss-mixins": "^5.0.0",
-    "precss": "^1.4.0",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1",
-    "webpack-uglify-js-plugin": "1.1.9"
   },
   "license": "MIT"
 }
