implement mixin for adding themes. enhance tooltip styles. fix rendering

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "node-sass": "^3.4.2",
     "postcss-loader": "^0.8.2",
     "postcss-mixins": "^5.0.0",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
