--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "start": "webpack"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.4",
-    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.2.0",
     "babel-loader": "^6.2.0",
@@ -27,6 +25,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.35.0",
     "node-sass": "^3.4.2",
+    "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.8.2",
     "postcss-mixins": "^5.0.0",
     "postcss-nested": "^1.0.0",
