--- a/example/package.json
+++ b/example/package.json
@@ -24,8 +24,11 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.35.0",
     "node-sass": "^3.4.2",
+    "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.8.2",
     "postcss-mixins": "^5.0.0",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
