--- a/example/package.json
+++ b/example/package.json
@@ -33,6 +33,8 @@
     "precss": "^1.4.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
