--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
   - "6"
   - "6.1"
   - "5.11"
+cache: yarn
+install: npm install
+script: "sudo $(which yarn) test"
 before_script:
   - chmod +x sh/build.sh
   - ./sh/build.sh
