--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "version": "1.1.8",
   "scripts": {
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "start": "webpack"
+    "start": "webpack",
+    "test": "jest"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.2.0",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2017": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-runtime": "^6.2.0",
@@ -24,6 +26,7 @@
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.35.0",
+    "jest": "^18.1.0",
     "node-sass": "^3.4.2",
     "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.8.2",
@@ -34,6 +37,7 @@
     "precss": "^1.4.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-test-renderer": "^15.4.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
