--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.35.0",
     "jest": "^18.1.0",
+    "moment": "^2.17.1",
     "node-sass": "^3.4.2",
     "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.8.2",
