--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^15.4.0",
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.0",
+    "underscore": "^1.8.3",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-uglify-js-plugin": "1.1.9"
