--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,9 @@
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-typecheck": "^3.9.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-react": "^6.16.0",
@@ -42,5 +44,9 @@
     "webpack-uglify-js-plugin": "1.1.9",
     "whatwg-fetch": "^1.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel-runtime": "^6.23.0",
+    "react-hot-loader": "^3.0.0-beta.6"
+  }
 }
