--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-typecheck": "^3.9.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-react": "^6.23.0",
@@ -78,5 +79,8 @@
     "url": "https://github.com/kiqs/chartify/issues",
     "email": "kirillstyopkin@gmail.com"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react-hot-loader": "^3.0.0-beta.6"
+  }
 }
