--- a/example/package.json
+++ b/example/package.json
@@ -37,6 +37,8 @@
     "react-dom": "^15.4.0",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
     "webpack": "^2.2.1",
