--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
-	"presets": ["es2015", "react", "stage-0"],
-  	"plugins": ["typecheck", "transform-class-properties", "transform-flow-strip-types"]
+	"presets": [["es2015", {"modules": false }], "stage-0", "react"],
+	"plugins": [
+		"react-hot-loader/babel",
+		"typecheck",
+		"transform-class-properties",
+		"transform-flow-strip-types",
+		"transform-runtime"
+	],
+	"env": {
+    "test": {
+      "presets": ["es2015", "react", "stage-0"]
+    }
+  }
 }
