--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,10 +1,15 @@
 {
-	"presets": ["es2015", "react", "stage-0"],
+	"presets": [["es2015", {"modules": false }], "stage-0", "react"],
 	"plugins": [
-		"typecheck", 
-		"transform-class-properties", 
-		"transform-flow-strip-types", 
-		"transform-runtime",
-		"react-hot-loader/babel"
-	]
+		"react-hot-loader/babel",
+		"typecheck",
+		"transform-class-properties",
+		"transform-flow-strip-types",
+		"transform-runtime"
+	],
+	"env": {
+    "test": {
+      "presets": ["es2015", "react", "stage-0"]
+    }
+  }
 }
