--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-typecheck": "^3.9.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2017": "^6.16.0",
@@ -41,7 +42,7 @@
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
-    "webpack": "^2.2.1",
+    "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-uglify-js-plugin": "1.1.9"
   },
