--- a/example/package.json
+++ b/example/package.json
@@ -32,10 +32,11 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "react-redux": "^4.4.0",
-    "redux": "^3.3.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "prop-types": "^15.6.0",
+    "react-redux": "^5.0.6",
+    "redux": "^4.0.0-beta.1",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.0",
