--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "scripts": {
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "start": "webpack",
-    "test": "jest"
+    "test": "jest",
+    "prettier": "prettier src/*.js --ignore-path ./.prettierignore --write && git add . && git status",
+    "prettier-watch": "onchange 'src/*.js' -- prettier --write {{changed}}"
+  },
+  "pre-commit": [
+    "prettier"
+  ],
+  "dependencies": {
+    "react-hot-loader": "^3.0.0-beta.6"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -15,8 +23,8 @@
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-typecheck": "^3.9.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-typecheck": "^3.9.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2017": "^6.16.0",
@@ -36,10 +44,12 @@
     "postcss-mixins": "^5.0.0",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
+    "pre-commit": "^1.2.2",
     "precss": "^1.4.0",
+    "prettier": "1.9.2",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "prop-types": "^15.6.0",
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
@@ -81,8 +91,5 @@
     "url": "https://github.com/kis/chartify/issues",
     "email": "kirillstyopkin@gmail.com"
   },
-  "license": "MIT",
-  "dependencies": {
-    "react-hot-loader": "^3.0.0-beta.6"
-  }
+  "license": "MIT"
 }
