--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,19 @@
   "name": "chartify",
   "version": "0.0.1",
   "description": "chartify",
+  "scripts": {
+    "prettier": "prettier main/**/*.js --ignore-path ./.prettierignore --write && git add . && git status",
+    "prettier-watch": "onchange 'main/**/*.js' -- prettier --write {{changed}}"
+  },
+  "pre-commit": [
+    "prettier"
+  ],
+  "dependencies": {
+    "babel-runtime": "^6.23.0",
+    "express": "^4.15.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "socket.io": "^1.7.3"
+  },
   "devDependencies": {
     "autoprefixer": "^6.3.4",
     "autoprefixer-loader": "^3.2.0",
@@ -32,9 +45,10 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
+    "prettier": "1.9.2",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "prop-types": "^15.6.0",
     "react-redux": "^5.0.6",
     "redux": "^4.0.0-beta.1",
     "redux-logger": "^3.0.1",
@@ -46,11 +60,5 @@
     "webpack-uglify-js-plugin": "1.1.9",
     "whatwg-fetch": "^1.0.0"
   },
-  "license": "MIT",
-  "dependencies": {
-    "babel-runtime": "^6.23.0",
-    "express": "^4.15.2",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "socket.io": "^1.7.3"
-  }
+  "license": "MIT"
 }
