--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.2.0",
-    "babel-jest": "^18.0.0",
+    "babel-jest": "^22.0.4",
     "babel-loader": "^6.2.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-typecheck": "^3.9.0",
@@ -33,10 +34,13 @@
     "babel-preset-stage-3": "^6.17.0",
     "babel-runtime": "^6.2.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.35.0",
-    "jest": "^18.1.0",
+    "jest": "^22.0.4",
+    "jest-cli": "^22.0.4",
     "moment": "^2.17.1",
     "node-sass": "^3.4.2",
     "postcss-cssnext": "^2.8.0",
@@ -49,13 +53,20 @@
     "prettier": "1.9.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
-    "react-test-renderer": "^15.4.2",
+    "react-test-renderer": "^16.2.0",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-uglify-js-plugin": "1.1.9"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetsTransformer.js", 
+      "\\.(css|less)$": "<rootDir>/assetsTransformer.js" 
+    } 
   },
   "main": "chartify.js",
   "repository": "kis/chartify",
