--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 sudo: required
 language: node_js
 node_js:
-  - "7.10"
+  - "8.9.1"
 cache: yarn
 install: npm install
 script: "sudo $(which yarn) test"
 before_script:
-  - brew install yarn
+  - sudo apt-get update && sudo apt-get install yarn
   - chmod +x sh/build.sh
   - ./sh/build.sh
 notifications:
