--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+os: osx
 sudo: required
 language: node_js
 node_js:
@@ -6,7 +7,7 @@ cache: yarn
 install: npm install
 script: "sudo $(which yarn) test"
 before_script:
-  - sudo apt-get update && sudo apt-get install yarn
+  - brew install yarn
   - chmod +x sh/build.sh
   - ./sh/build.sh
 notifications:
