--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,9 @@
 	],
 	"env": {
     "test": {
+			"plugins": [
+        "istanbul"
+      ],
       "presets": ["es2015", "react", "stage-0"]
     }
   }
