--- a/package.json
+++ b/package.json
@@ -12,14 +12,37 @@
   "pre-commit": [
     "prettier"
   ],
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "sourceMap": false,
+    "instrument": false
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetsTransformer.js",
+      "\\.(css|less)$": "<rootDir>/assetsTransformer.js"
+    },
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/vendor/**"
+    ]
+  },
   "dependencies": {
     "react-hot-loader": "^3.0.0-beta.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.2.0",
     "babel-jest": "^22.0.4",
     "babel-loader": "^6.2.0",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
@@ -27,12 +50,15 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-typecheck": "^3.9.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.26.0",
     "babel-runtime": "^6.2.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.23.1",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -43,6 +69,7 @@
     "jest-cli": "^22.0.4",
     "moment": "^2.17.1",
     "node-sass": "^3.4.2",
+    "nyc": "^11.4.1",
     "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.8.2",
     "postcss-mixins": "^5.0.0",
@@ -61,12 +88,6 @@
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-uglify-js-plugin": "1.1.9"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetsTransformer.js", 
-      "\\.(css|less)$": "<rootDir>/assetsTransformer.js" 
-    } 
   },
   "main": "chartify.js",
   "repository": "kis/chartify",
