--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "2.1.0",
   "scripts": {
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "flow start": "flow start",
+    "flow stop": "flow stop",
+    "flow status": "flow status",
+    "flow coverage": "flow coverage",
     "start": "webpack",
     "test": "jest",
     "prettier": "prettier src/*.js --ignore-path ./.prettierignore --write && git add . && git status",
@@ -42,7 +46,7 @@
     "babel-core": "^6.2.0",
     "babel-jest": "^22.0.4",
     "babel-loader": "^6.2.0",
-    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
@@ -53,23 +57,24 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2017": "^6.16.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.2.0",
-    "cross-env": "^5.1.3",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.23.1",
-    "enzyme": "^3.2.0",
+    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
-    "flow-bin": "^0.35.0",
+    "flow-bin": "^0.68.0",
     "jest": "^22.0.4",
     "jest-cli": "^22.0.4",
     "moment": "^2.17.1",
     "node-sass": "^3.4.2",
-    "nyc": "^11.4.1",
+    "nyc": "^11.6.0",
     "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.8.2",
     "postcss-mixins": "^5.0.0",
@@ -78,7 +83,7 @@
     "pre-commit": "^1.2.2",
     "precss": "^1.4.0",
     "prettier": "1.9.2",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
