--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react": "^16.2.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
+    "react-draggable": "^3.0.5",
     "react-test-renderer": "^16.2.0",
     "socket.io-client": "^2.0.4",
     "style-loader": "^0.13.0",
