--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "dependencies": {
+    "eslint": "^4.19.1",
     "react-hot-loader": "^3.0.0-beta.6"
   },
   "devDependencies": {
@@ -73,7 +74,10 @@
     "css-loader": "^0.23.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.68.0",
     "jest": "^22.0.4",
