--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-    "extends": "airbnb"
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "plugins": [
+        "flowtype"
+    ],
+    "rules": {
+        "class-methods-use-this": ["off"],
+        "react/jsx-filename-extension": ["off"]
+    }
 }
