--- a/example/package.json
+++ b/example/package.json
@@ -36,7 +36,7 @@
     "chartify": "3.0.1",
     "css-loader": "^0.23.1",
     "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "flow-bin": "^0.35.0",
     "moment": "^2.21.0",
     "node-sass": "^4.5.3",
@@ -56,7 +56,7 @@
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
-    "webpack": "^2.2.1",
+    "webpack": "^4.0.0",
     "webpack-dev-server": "^2.4.1",
     "webpack-uglify-js-plugin": "1.1.9",
     "whatwg-fetch": "^1.0.0"
