--- a/example/package.json
+++ b/example/package.json
@@ -3,17 +3,29 @@
   "version": "0.0.1",
   "description": "chartify",
   "scripts": {
+    "lint": "eslint js/*/*.js --fix",
     "prettier": "prettier main/**/*.js --ignore-path ./.prettierignore --write && git add . && git status",
     "prettier-watch": "onchange 'main/**/*.js' -- prettier --write {{changed}}"
   },
   "pre-commit": [
-    "prettier"
+    "prettier",
+    "lint"
   ],
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "express": "^4.15.2",
+    "moment": "^2.21.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.3.0",
+    "react-redux": "^5.0.6",
     "react-hot-loader": "^3.0.0-beta.6",
-    "socket.io": "^1.7.3"
+    "redux": "^4.0.0-beta.1",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^2.1.1",
+    "whatwg-fetch": "^1.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.4",
@@ -33,12 +45,14 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-runtime": "^6.2.0",
-    "chartify": "3.0.1",
+    "chartify": "3.1.0",
     "css-loader": "^0.23.1",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "flow-bin": "^0.35.0",
-    "moment": "^2.21.0",
     "node-sass": "^4.5.3",
     "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.8.2",
@@ -47,19 +61,12 @@
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "prettier": "1.9.2",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^4.0.0-beta.1",
-    "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.0",
-    "underscore": "^1.8.3",
     "webpack": "^4.0.0",
     "webpack-dev-server": "^2.4.1",
     "webpack-uglify-js-plugin": "1.1.9",
-    "whatwg-fetch": "^1.0.0"
+    "why-did-you-update": "^0.1.1"
   },
   "license": "MIT"
 }
