--- a/example/package.json
+++ b/example/package.json
@@ -62,6 +62,7 @@
     "precss": "^1.4.0",
     "prettier": "1.9.2",
     "react-dom": "^16.2.0",
+    "react-router": "^4.3.1",
     "style-loader": "^0.13.0",
     "webpack": "^4.0.0",
     "webpack-dev-server": "^2.4.1",
