add css modules

--- a/example/package.json
+++ b/example/package.json
@@ -61,8 +61,10 @@
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "prettier": "1.9.2",
+    "react-css-modules": "^4.7.4",
     "react-dom": "^16.2.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "style-loader": "^0.13.0",
     "webpack": "^4.0.0",
     "webpack-dev-server": "^2.4.1",
