--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-	"presets": [["es2015", {"modules": false }], "stage-0", "react", "flow"],
+	"presets": ["env", "stage-0", "react", "flow"],
 	"retainLines": true,
 	"plugins": [
 		"react-hot-loader/babel",
@@ -12,8 +12,7 @@
     "test": {
 			"plugins": [
         "istanbul"
-      ],
-      "presets": ["es2015", "react", "stage-0"]
+      ]
     }
   }
 }
