--- a/example/package.json
+++ b/example/package.json
@@ -12,24 +12,22 @@
     "lint"
   ],
   "dependencies": {
-    "babel-runtime": "^6.23.0",
     "express": "^4.15.2",
     "moment": "^2.21.0",
     "prop-types": "^15.6.0",
     "react": "^16.3.0",
-    "react-redux": "^5.0.6",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-redux": "^5.0.6",
     "redux": "^4.0.0-beta.1",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "socket.io": "^1.7.3",
     "socket.io-client": "^2.1.1",
-    "whatwg-fetch": "^1.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.4",
-    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.2.0",
     "babel-loader": "^6.2.0",
@@ -39,13 +37,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-typecheck": "^3.9.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2017": "^6.16.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
-    "babel-runtime": "^6.2.0",
-    "chartify": "3.1.0",
+    "babel-runtime": "^6.26.0",
     "css-loader": "^0.23.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "^2.12.0",
@@ -54,10 +50,10 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "flow-bin": "^0.35.0",
     "node-sass": "^4.5.3",
-    "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.8.2",
     "postcss-mixins": "^5.0.0",
     "postcss-nested": "^1.0.0",
+    "postcss-preset-env": "^5.3.0",
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "prettier": "1.9.2",
@@ -66,7 +62,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "style-loader": "^0.13.0",
-    "webpack": "^4.0.0",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^2.4.1",
     "webpack-uglify-js-plugin": "1.1.9",
     "why-did-you-update": "^0.1.1"
