--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "flow status": "flow status",
     "flow coverage": "flow coverage",
     "start": "webpack",
-    "lint": "eslint src/Chartify.js --fix",
+    "lint": "eslint src/Chartify.tsx --fix",
     "test": "jest",
-    "prettier": "prettier src/*.js --ignore-path ./.prettierignore --write && git add . && git status",
+    "prettier": "prettier src/*.tsx --ignore-path ./.prettierignore --write && git add . && git status",
     "prettier-watch": "onchange 'src/*.js' -- prettier --write {{changed}}",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "pre-commit": [
-    "prettier",
-    "lint"
+    "prettier"
   ],
   "nyc": {
     "require": [
@@ -37,16 +36,18 @@
       "\\.(css|less)$": "<rootDir>/assetsTransformer.js"
     },
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
+      "src/**/*.{js,jsx,ts,tsx}",
       "!**/node_modules/**",
       "!**/vendor/**"
     ]
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@types/react": "^16.8.2",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^12.0.0-alpha.0",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
+    "react": "^16.8.2",
     "react-hot-loader": "^3.0.0-beta.6"
   },
   "devDependencies": {
@@ -54,28 +55,19 @@
     "@storybook/addon-links": "^4.0.0-alpha.3",
     "@storybook/addons": "^4.0.0-alpha.3",
     "@storybook/react": "^4.0.0-alpha.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.2.0",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^22.0.4",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2017": "^6.16.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-function-bind": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-jest": "^23.4.0",
+    "babel-loader": "^8.0.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.23.1",
     "enzyme": "^3.3.0",
