--- a/example/package.json
+++ b/example/package.json
@@ -14,10 +14,14 @@
     "lint"
   ],
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@types/react": "^16.8.2",
+    "@types/react-css-modules": "^4.6.2",
+    "@types/react-router-dom": "^4.3.4",
     "express": "^4.15.2",
     "moment": "^2.24.0",
     "prop-types": "^15.6.0",
-    "react": "^16.3.0",
+    "react": "^16.8.6",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.6",
     "redux": "^4.0.0-beta.1",
@@ -29,46 +33,49 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-function-bind": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "autoprefixer": "^6.3.4",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.2.0",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "babel-runtime": "^6.26.0",
+    "babel-jest": "^23.4.0",
+    "babel-loader": "^8.0.1",
+    "chartify": "^3.1.0",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^0.23.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "extract-css-chunks-webpack-plugin": "^4.5.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "flow-bin": "^0.35.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.5.3",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^0.8.2",
     "postcss-mixins": "^5.0.0",
-    "postcss-nested": "^1.0.0",
-    "postcss-preset-env": "^5.3.0",
+    "postcss-nested": "^1.0.1",
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "prettier": "1.9.2",
     "react-css-modules": "^4.7.9",
     "react-dom": "^16.2.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.1",
     "style-loader": "^0.13.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
     "webpack-uglify-js-plugin": "1.1.9",
     "why-did-you-update": "^0.1.1"
   },
