--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint": "^4.19.1",
     "eslint-config-standard": "^12.0.0-alpha.0",
     "prop-types": "^15.6.1",
-    "react": "^16.8.2",
+    "react": "^16.8.6",
     "react-hot-loader": "^3.0.0-beta.6"
   },
   "devDependencies": {
@@ -96,12 +96,12 @@
     "react-test-renderer": "^16.2.0",
     "socket.io-client": "^2.0.4",
     "style-loader": "^0.13.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.1.5",
     "webpack-uglify-js-plugin": "1.1.9"
   },
-  "main": "chartify.js",
+  "main": "./dist/index.js",
   "repository": "kis/chartify",
   "homepage": "github.com/kis/chartify",
   "keywords": [
