--- a/example/package.json
+++ b/example/package.json
@@ -4,10 +4,18 @@
   "description": "chartify",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.dev.js --history-api-fallback",
+    "prod": "webpack-dev-server --config webpack.config.prod.js --history-api-fallback",
+    "build": "rm -rf dist && webpack --config webpack.config.prod.js",
     "start": "webpack-dev-server --inline --history-api-fallback",
-    "lint": "eslint js/*/*.js --fix",
-    "prettier": "prettier js/**/*.js --ignore-path ./.prettierignore --write && git add . && git status",
-    "prettier-watch": "onchange 'js/**/*.js' -- prettier --write {{changed}}"
+    "test": "jest --config=jest.config.js",
+    "coverage": "jest --coverage",
+    "test:watch": "npm test -- --watch",
+    "ts-compile": "tsc",
+    "ts-lint": "tslint -c tslint.json src/**/*.{ts,tsx}",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "lint": "eslint js/*/*.{ts,tsx,js,jsx} --fix",
+    "prettier": "prettier js/**/*.{ts,tsx,js,jsx} --ignore-path ./.prettierignore --write && git add . && git status",
+    "prettier-watch": "onchange 'js/**/*.{ts,tsx,js,jsx}' -- prettier --write {{changed}}"
   },
   "pre-commit": [
     "prettier",
@@ -15,17 +23,12 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "@types/react": "^16.8.2",
-    "@types/react-css-modules": "^4.6.2",
-    "@types/react-router-dom": "^4.3.4",
     "express": "^4.15.2",
     "moment": "^2.24.0",
-    "prop-types": "^15.6.0",
     "react": "^16.8.6",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.6",
     "redux": "^4.0.0-beta.1",
-    "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "socket.io": "^1.7.3",
     "socket.io-client": "^2.2.0",
@@ -44,6 +47,13 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-redux": "^6.0.9",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-css-modules": "^4.6.2",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^6.3.4",
     "babel-jest": "^23.4.0",
     "babel-loader": "^8.0.1",
@@ -70,7 +80,7 @@
     "precss": "^1.4.0",
     "prettier": "1.9.2",
     "react-css-modules": "^4.7.9",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^4.37.0",
