--- a/example/package.json
+++ b/example/package.json
@@ -47,15 +47,16 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@types/react-hot-loader": "^4.1.0",
-    "@types/react-redux": "^6.0.9",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.5",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-redux": "^6.0.9",
     "@types/react-router-dom": "^4.3.4",
     "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^6.3.4",
     "babel-jest": "^23.4.0",
     "babel-loader": "^8.0.1",
+    "babel-plugin-styled-components": "^1.10.6",
     "chartify": "^3.1.0",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^0.23.1",
@@ -70,13 +71,6 @@
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.5.3",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^0.8.2",
-    "postcss-mixins": "^5.0.0",
-    "postcss-nested": "^1.0.1",
-    "postcss-simple-vars": "^3.0.0",
-    "precss": "^1.4.0",
     "prettier": "1.9.2",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
