--- a/example/package.json
+++ b/example/package.json
@@ -71,6 +71,7 @@
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.5.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "1.9.2",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
