--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     ]
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
     "@types/react": "^16.8.2",
+    "core-js": "^3.1.4",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^12.0.0-alpha.0",
     "prop-types": "^15.6.1",
