--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@types/core-js": "^2.5.2",
     "@types/react": "^16.8.2",
     "core-js": "^3.1.4",
     "eslint": "^4.19.1",
