--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,24 @@
 node_modules/
 .idea/
+.github/
+.storybook/
+coverage/
 example/
+dist/
+docs/
+storybook-static/
 sh/
+src/
 yarn-error.log
+.coveralls.yml
+.eslintrc.json
+.firebaserc
+404.html
+assetsTransformer.js
+blocks.jpeg
+firebase.json
+tsconfig.json
+tslint.json
 .babelrc
 .travis.yml
 Makefile
