--- a/package.json
+++ b/package.json
@@ -35,10 +35,6 @@
     "react-hot-loader": "^3.0.0-beta.6"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^4.0.0-alpha.3",
-    "@storybook/addon-links": "^4.0.0-alpha.3",
-    "@storybook/addons": "^4.0.0-alpha.3",
-    "@storybook/react": "^4.0.0-alpha.3",
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -50,6 +46,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@storybook/addon-actions": "^4.0.0-alpha.3",
+    "@storybook/addon-links": "^4.0.0-alpha.3",
+    "@storybook/addons": "^4.0.0-alpha.3",
+    "@storybook/react": "^4.0.0-alpha.3",
+    "@types/shortid": "0.0.29",
     "babel-jest": "^23.4.0",
     "babel-loader": "^8.0.1",
     "cross-env": "^5.1.4",
@@ -75,6 +76,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
+    "shortid": "^2.2.14",
     "style-loader": "^0.13.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
